--- a/css/game.css
+++ b/css/game.css
@@ -2,122 +2,35 @@
 
 html,
 body {
-  margin: 0%;
-  box-sizing: border-box;
-  overflow-x: hidden;
-
-  background: url("../assets/BOOKS/MAIN_SITE/BACKGROUND\ FILL\ GIỮ\ CỐ\ ĐỊNH.png");
+  background: url("../assets/GAMES/GAME\ LIST\ BACKGROUND.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
 }
-
-:root {
-  /*      theme font-family   */
-  --Bungee: "Bungee", cursive;
-  --Kavoon: "Kavoon", cursive;
-  --Roboto_Slab: "Roboto_Slab", cursive;
-
-  /*      theme font-color  */
-  --text: #fffadc;
-}
-
-.nav {
-  background-size: cover;
-  background: url("../assets/TOP\ BAR.png");
-  height: 11.5vh;
-}
-
-.top-bar-left {
-  width: 100%;
-  justify-content: space-between;
-}
-
-.top-bar-left .logo {
-  width: 30%;
-  margin: 1.35rem -0.7rem;
-}
-
-.top-bar-left .top-menu {
-  float: right;
-  margin: 1rem 2.5rem;
-  display: block;
-  width: 60%;
-}
-
-.top-bar-left .top-menu .language {
-  float: right;
-  width: 6%;
-}
-
-.top-bar-left .top-menu .menu {
-  position: relative;
-  width: 100%;
-  display: flex;
-  /* margin: 2rem 5rem 0 0; */
-  justify-content: space-between;
-}
-
-.top-bar-left .top-menu .menu .menu-item {
-  /* margin: 0.5rem 2rem 0 0rem; */
-  margin-right: 3rem;
-  color: var(--text);
-  width: 100%;
-  position: relative;
-}
-
-.top-bar-left .top-menu .menu .menu-item > img {
-  position: absolute;
-  width: 120%;
-  z-index: 1;
-  min-width: 10rem;
-}
-
-.top-bar-left .top-menu .menu .menu-item > p {
-  width: 120%;
-  position: relative;
-  z-index: 100;
-  text-align: center;
-  vertical-align: middle;
-  font-size: 24px;
-  text-transform: uppercase;
-  font-family: var(--Kavoon);
-  margin: 1rem 0 0 0;
-}
-
-/******** Main ********/
-main {
-  /* width: 100%; */
-  height: 300vh;
-  justify-content: center;
-  /* overflow: hidden; */
-}
-
 /******** Banner ********/
 
 main .banner {
-  width: 100%;
-  height: 20%;
+  border: orange 0.2rem solid;
   background: url("../assets/GAMES/BANNER.png");
   background-size: cover;
-  border: orange 0.2rem solid;
 }
 
 main .banner > p {
-  font-size: 9rem;
+  font-size: 10vw;
   font-family: var(--Bungee);
   text-transform: uppercase;
   text-align: center;
   color: var(--text);
   text-shadow: 0.5rem 0.5rem 0.75rem #2c2b2b;
+  line-height: 15vw;
 }
 
 /******** Game list ********/
 
 main .game-list {
-  width: 90%;
-  height: 80%;
+  max-width: 90%;
+  height: auto;
   margin: 0 4.5%;
   background-size: cover;
   border: orange 0.2rem solid;
@@ -125,197 +38,73 @@ main .game-list {
 }
 
 main .game-list .list-item {
-  margin: 4rem 4rem;
   width: 100%;
-  height: 35%;
+  height: auto;
+  margin: 4rem 0;
 }
 
 main .game-list .list-item .group-game {
-  width: 90%;
-  height: 58%;
-  display: inline-flex;
-  justify-content: space-around;
-  margin: 3% 0;
+  max-width: 90%;
+  height: auto;
+  display: grid;
+  margin: auto;
+  margin-top: 2rem;
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-auto-rows: minmax(200px, auto);
+  grid-gap: 5em 1em;
 }
 
 main .game-list .list-item .title-list {
   background: url("../assets/NÚT.png");
   background-size: cover;
-  width: 20%;
+  max-width: 20%;
+  display: flex;
+  justify-content: center;
 }
 
 main .game-list .list-item .title-list > p {
-  text-align: center;
-  font-size: 2.2rem;
+  font-size: 1.5vw;
   text-transform: uppercase;
   font-family: var(--Kavoon);
   color: var(--text);
-  padding: 1rem 0;
 }
 
 main .game-list .list-item .group-game .game-item {
-  width: 30%;
-  height: 100%;
+  max-width: 90%;
+  height: auto;
   background: url("../assets/GAMES/GAME\ LIST\ BACKGROUND.png");
   background-size: cover;
   border-radius: 1rem;
   overflow: hidden;
   cursor: pointer;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 main .game-list .list-item .group-game .game-item .game-img {
-  width: 100%;
-  height: 77%;
+  max-width: 100%;
+  height: auto;
   display: flex;
 }
 
 main .game-list .list-item .group-game .game-item .game-img > img {
-  display: block;
   margin: auto;
-  width: 98%;
+  max-width: 100%;
   height: auto;
-  border-radius: 0.5rem;
 }
 
 main .game-list .list-item .group-game .game-item .game-title {
-  width: 100%;
-  height: 23%;
+  max-width: 100%;
+  height: auto;
 }
 
 main .game-list .list-item .group-game .game-item .game-title > p {
-  font-size: 2.5rem;
+  font-size: 4vh;
   text-transform: uppercase;
   font-family: var(--Bungee);
+  text-align: center;
   color: var(--text);
-  text-align: center;
-  margin: 0;
-  text-shadow: 2px 2px 4px #797171;
-}
-
-/******** Modal ********/
-
-/* The Modal (background) */
-.modal {
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.5s;
-  animation-name: animatetop;
-  animation-duration: 0.5s;
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 102; /* Sit on top */
-  padding-top: 4%; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-
-.modal-content {
-  position: relative;
-  background: url("../assets/BOOKS/BOOK_INFO/BACKGROUND\ INFO\ SÁCH.png")
-    no-repeat;
-  margin: auto;
-  padding: 0;
-  width: 42%;
-  height: 87%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 1rem;
-  overflow: hidden;
-}
-
-/* Add Animation */
-@-webkit-keyframes animatetop {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes animatetop {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-/* The Close Button */
-.close {
-  position: absolute;
-  padding: 1% 70%;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.modal-header {
-  background: url("../assets/BOOKS/BOOK_INFO/NỀN\ SAU\ SÁCH.png");
-  background-size: cover;
-  width: 100%;
-  height: 50%;
-  border-radius: 1rem;
-}
-
-.modal-header > img {
-  position: absolute;
-  margin: auto;
-  top: 3%;
-  left: 0;
-  right: 0;
-}
-
-.modal-body {
-  width: 100%;
-  height: 100%;
-  color: var(--text);
-}
-
-.modal-body > h2 {
-  font-size: 2.2rem;
-  text-transform: uppercase;
-  font-family: var(--Bungee);
-  text-shadow: 2px 2px 4px #2c2b2b;
-  text-align: center;
-}
-
-.modal-body > p {
-  padding: 0 10%;
-  text-align: center;
-  font-size: 1.2rem;
-}
-
-.modal-body .bottom-btn {
-  background: url("../assets/NÚT.png") no-repeat;
-  background-size: cover;
-  width: 40%;
-  height: 9%;
-  margin: auto;
-}
-
-.modal-body .bottom-btn > p {
-  font-size: 1.5rem;
-  text-transform: uppercase;
-  font-family: var(--Bungee);
-  /* margin: auto; */
-  text-align: center;
-}
-
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #5cb85c;
+  /* margin: 0; */
+  line-height: 5vh;
+  text-shadow: 1px 1px 2px #797171;
 }
 
 /******** Footer ********/
@@ -325,28 +114,85 @@ footer.footer {
   height: 6.6vh;
 }
 
-/*              Viewport less then or equal to 1130px            */
+/*              Viewport less then or equal to 1024px            */
 
-@media only screen and (max-width: 1130px) {
-  .nav .top-bar-left .top-menu .menu .menu-item > p {
-    font-size: 12px;
+@media only screen and (max-width: 1024px) {
+  main .game-list .list-item .group-game {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+
+  main .banner > p {
+    font-size: 15vw;
+    line-height: 20vw;
+  }
+
+  .nav .top-menu {
+    display: none;
+  }
+
+  #overlay-button span {
+    display: block;
+  }
+
+  main .game-list .list-item .title-list {
+    max-width: 40%;
+  }
+
+  main .game-list .list-item .title-list > p {
+    font-size: 3vw;
   }
 }
 
-/*              Viewport less then or equal to 750px            */
+/*              Viewport less then or equal to 768px            */
 
-@media only screen and (max-width: 750px) {
-  .nav .top-bar-left,
-  .nav .top-menu,
-  .nav .menu {
-    flex-direction: column;
+@media only screen and (max-width: 768px) {
+  main .game-list .list-item {
+    margin: 4rem 2.5rem;
+    width: 100%;
+    height: auto;
+  }
+}
+
+/*              Viewport less then or equal to 500px            */
+
+@media only screen and (max-width: 500px) {
+  .nav .logo > img {
+    width: 80%;
   }
 
-  .nav .top-bar-left .top-menu .language {
-    /* display: none; */
+  main .game-list .game-item {
+    margin: 1rem 1.2rem;
+    width: 100%;
+    height: auto;
   }
 
-  .nav .toggle-collapse {
-    display: initial;
+  main .game-list .list-item .group-game {
+    grid-gap: 0 0;
+  }
+
+  main .game-list .list-item {
+    margin: 0;
+  }
+
+  main .game-list .list-item .title-list {
+    margin: 1rem 0;
+  }
+}
+
+/*              Viewport less then or equal to 375px            */
+
+@media only screen and (max-width: 375px) {
+  main .game-list .list-item .group-game {
+    margin: 0.3rem;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-rows: minmax(200px, auto);
+  }
+}
+
+/*              Viewport less then or equal to 320px            */
+
+@media only screen and (max-width: 320px) {
+  main .game-list .list-item .group-game {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
 }
