--- a/css/catalogue.css
+++ b/css/catalogue.css
@@ -81,10 +81,8 @@ main .catalogue .title-item {
 
 main .catalogue .title-item .title-list {
   background: url("../assets/CATALOGUE/NÚT/NÚT\ 2.png");
-  /* background: #000; */
   background-size: cover;
   width: 24%;
-  /* height: 10%; */
   display: flex;
   justify-content: center;
   cursor: pointer;
@@ -113,11 +111,11 @@ main .catalogue .catalogue-list {
 .cards {
   max-width: 100%;
   height: auto;
-  /* margin: 5rem 0 5rem 0; */
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
   grid-auto-rows: minmax(200px, auto);
   grid-gap: 10em 0;
+  margin-bottom: 1rem;
 }
 
 .card {
@@ -125,14 +123,14 @@ main .catalogue .catalogue-list {
   -ms-flex-direction: column;
   flex-direction: column;
   position: relative;
+  margin: auto;
 }
 
 .thumbnail img {
-  height: auto;
   text-align: center;
-  margin-left: 8rem;
+  max-width: 100%;
   cursor: pointer;
-  /* margin-right: auto; */
+  margin-right: auto;
 }
 
 /******** Modal ********/
@@ -146,7 +144,7 @@ main .catalogue .catalogue-list {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 102; /* Sit on top */
-  padding-top: 4%; /* Location of the box */
+  padding-top: 12vh; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -207,7 +205,7 @@ main .catalogue .catalogue-list {
 
 .modal-header {
   max-width: 100%;
-  height: 25vw;
+  height: 20vw;
   border-radius: 1rem;
 }
 
@@ -302,7 +300,7 @@ main .catalogue .catalogue-list {
 }
 
 .modal-header > img {
-  max-width: 100%;
+  max-width: 20%;
   height: auto;
   border-radius: 1rem;
 }
@@ -320,7 +318,7 @@ main .catalogue .catalogue-list {
   text-shadow: 2px 2px 4px #2c2b2b;
   text-align: center;
   margin: 0;
-  line-height: 8vw;
+  line-height: 4vw;
 }
 
 .modal-body > p {
@@ -582,11 +580,23 @@ footer.footer {
   height: 6.6vh;
 }
 
+/*              Viewport less then or equal to 1500px            */
+
+@media only screen and (max-width: 1500px) {
+  .thumbnail img {
+    max-width: 20vw;
+  }
+}
+
 /*              Viewport less then or equal to 1024px            */
 
 @media only screen and (max-width: 1024px) {
   .cards {
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  }
+
+  .thumbnail img {
+    max-width: 100vw;
   }
 
   .modal-content,
@@ -657,6 +667,10 @@ footer.footer {
 
   #overlay-button span {
     display: block;
+  }
+
+  .modal-body > h2 {
+    line-height: 8vw;
   }
 }
 
