--- a/css/game.css
+++ b/css/game.css
@@ -49,7 +49,7 @@ main .game-list .list-item .group-game {
   display: grid;
   margin: auto;
   margin-top: 2rem;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
   grid-auto-rows: minmax(200px, auto);
   grid-gap: 5em 1em;
 }
@@ -77,6 +77,7 @@ main .game-list .list-item .group-game .game-item {
   border-radius: 1rem;
   overflow: hidden;
   cursor: pointer;
+  margin: auto;
 }
 
 main .game-list .list-item .group-game .game-item .game-img {
