--- a/css/home.css
+++ b/css/home.css
@@ -200,7 +200,7 @@ body {
   margin: auto;
   margin-top: 2rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
   grid-auto-rows: minmax(200px, auto);
   grid-gap: 2rem 2rem;
 }
@@ -236,6 +236,12 @@ footer.footer {
   height: 6.6vh;
 }
 
+/*              Viewport less then or equal to 1888px            */
+
+/*              Viewport less then or equal to 1526px            */
+
+/*              Viewport less then or equal to 1170px            */
+
 /*              Viewport less then or equal to 1024px            */
 
 @media only screen and (max-width: 1024px) {
@@ -269,7 +275,7 @@ footer.footer {
   }
 
   .catalog-container .catalog-bottom {
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
     grid-auto-rows: minmax(13vh, auto);
   }
 }
@@ -298,11 +304,6 @@ footer.footer {
     left: 44vw;
     top: 38.5vh;
   }
-
-  .catalog-container .catalog-bottom {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-auto-rows: minmax(13vh, auto);
-  }
 }
 
 /*              Viewport less then or equal to 411px            */
@@ -321,7 +322,6 @@ footer.footer {
   }
 
   .catalog-container .catalog-bottom {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-auto-rows: minmax(11vh, auto);
   }
 }
@@ -340,7 +340,7 @@ footer.footer {
   }
 
   .catalog-container .catalog-bottom {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-rows: minmax(14vh, auto);
   }
 }
 
