--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,7 @@ body {
 }
 
 .nav .logo {
+  max-width: 30vw;
   margin: 2rem 0;
   position: absolute;
 }
@@ -82,6 +83,7 @@ body {
   border: #fff solid;
   border-radius: 1rem;
   cursor: pointer;
+  margin-bottom: 0.3vw;
 }
 
 .top-bar .top-menu .menu {
@@ -115,7 +117,7 @@ body {
 #overlay-button {
   position: absolute;
   right: 2em;
-  top: 3em;
+  top: 1em;
   padding: 26px 11px;
   z-index: 5;
   cursor: pointer;
@@ -222,10 +224,31 @@ footer.footer {
   height: 6.6vh;
 }
 
-/*              Viewport less then or equal to 500px            */
+.copyright {
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
 
-@media only screen and (max-width: 500px) {
-  .nav .logo img {
-    width: 80%;
+.copyright p {
+  text-align: center;
+  color: var(--text);
+  font-family: var(--Roboto_Slab);
+  font-size: 1rem;
+}
+
+.copyright a {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #ae1e19;
+  text-decoration: none;
+}
+
+/*              Viewport less then or equal to 1024px            */
+
+@media only screen and (max-width: 1024px) {
+  .nav .logo {
+    max-width: 40vw;
   }
 }
