--- a/css/catalogue.css
+++ b/css/catalogue.css
@@ -114,7 +114,8 @@ main .catalogue .catalogue-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
   grid-auto-rows: minmax(200px, auto);
-  grid-gap: 10em 0;
+  grid-gap: 5em 0;
+  margin: auto;
   margin-bottom: 1rem;
 }
 
@@ -160,8 +161,6 @@ main .catalogue .catalogue-list {
   position: relative;
   background: url("../assets/CATALOGUE/DINO\ INFO/INFO BG/KHUNG.png") no-repeat;
   background-size: cover;
-  /* background-attachment: fixed; */
-  /* position: fixed; */
   margin: auto;
   padding: 0;
   max-width: 41%;
@@ -591,14 +590,6 @@ footer.footer {
 /*              Viewport less then or equal to 1024px            */
 
 @media only screen and (max-width: 1024px) {
-  .cards {
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  }
-
-  .thumbnail img {
-    max-width: 100vw;
-  }
-
   .modal-content,
   .close {
     top: 20%;
@@ -652,10 +643,6 @@ footer.footer {
     line-height: 0%;
   }
 
-  .card {
-    right: 10%;
-  }
-
   .top-bar .top-menu,
   .top-bar .menu-item {
     flex-direction: column;
@@ -677,21 +664,8 @@ footer.footer {
 /*              Viewport less then or equal to 768px            */
 
 @media only screen and (max-width: 768px) {
-  .thumbnail img {
-    width: 60%;
-  }
-  .cards {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-auto-rows: minmax(50px, auto);
-    grid-gap: 2rem 0;
-  }
-
   .indicator-index {
     height: 1rem !important;
-  }
-
-  .card {
-    right: 18%;
   }
 }
 
@@ -703,17 +677,8 @@ footer.footer {
   }
 
   .cards {
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  }
-
-  .card {
-    right: 0;
-    left: 0;
-  }
-
-  .thumbnail img {
-    width: 80%;
-    margin: 0 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+    grid-gap: 0 0;
   }
 
   .nav .logo > img {
