--- a/css/main.css
+++ b/css/main.css
@@ -235,11 +235,11 @@ footer.footer {
   text-align: center;
   color: var(--text);
   font-family: var(--Roboto_Slab);
-  font-size: 1rem;
+  font-size: 1.2vh;
 }
 
 .copyright a {
-  font-size: 1.5rem;
+  font-size: 1.5vh;
   font-weight: bold;
   color: #ae1e19;
   text-decoration: none;
